@@ -1,5 +1,8 @@
+2011-02-19:
+ - Fixed detection of deep recursive file include loops
+
 2011-02-18:
-  - Ctrl+B on file references (e.g. in include command) is supported now
+ - Ctrl+B on file references (e.g. in include command) is supported now
  - Issue #35: Math calculations using square brackets not supported
 
 2011-02-15:
